--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+# vite/react application container
   app:
     build:
       context: .
@@ -13,3 +14,21 @@ services:
     ports:
       - '3000:3000'
     command: npm run dev
+
+# database container
+  db:
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_DATABASE: tj_database
+      MYSQL_USER: tj
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./sql:/docker-entrypoint-initdb.d
+
+volumes:
+  db_data:
