--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -28,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "mysql2": "^3.3.0",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.2"
   }
