added axois request

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,10 @@ services:
       - pine
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
+    depends_on:
+      - db
+        # condition: service_healthy
+    restart: always
 
 volumes:
   db_data:
