--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "server": "npx nodemon --watch \"**\" --ext \"ts,json\" --ignore \"**/*.spec.ts\" --exec \"ts-node-esm server.ts\"",
+    "server": "nodemon --watch \"**\" --ext \"ts,json\" --ignore \"**/*.spec.ts\" --exec \"ts-node-esm server.ts\"",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
