--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
